--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "azure-imdb-fake",
   "version": "1.0.0",
-  "description": "",
+  "description": "Azure cont depl",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -14,9 +14,14 @@
     "@azure/functions": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "@types/node": "^18.19.31",
+    "prisma": "^5.12.1",
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   },
-  "main": "dist/src/functions/*.js"
+  "main": "dist/src/functions/*.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
