--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/functions": "^4.0.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.12.1",
     "@types/node": "^18.19.31",
     "prisma": "^5.12.1",
     "rimraf": "^5.0.0",
