--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "joi": "^17.12.3"
   },
   "devDependencies": {
     "@prisma/client": "^5.12.1",
